--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoist-all",
-  "version": "0.0.10",
+  "version": "0.0.14",
   "description": "Copy all non-existing node_modules from apps/* into root node_modules in a monorepo.",
   "bin": {
     "hoist-all": "bin/cli.js"
@@ -13,5 +13,8 @@
     "workspace"
   ],
   "author": "Murat Mehmet",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "commander": "^14.0.0"
+  }
 }
